--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/index.css">
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
+    <header>
+      <nav>
+          <div class="logo">
+              <h1>Sip n Play</h1>
+          </div>
+          <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Opening Times</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Menu</a></li>
+              <li><a href="#">Book a Table</a></li>
+          </ul>
+      </nav>
+      <div class="image-container">
+          <img src="images/headerbg.webp" alt="">
+      </div>
+      <h1 class="hero-title">Sip n<br>Play</h1>
+      <p class="hero-tagline">Park Slope's Best Board Game Cafe.</p>
+      <a href="#" class="hero-button">BOOK TABLE</a>
+    </header>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
