--- a/index.html
+++ b/index.html
@@ -23,12 +23,77 @@
           </ul>
       </nav>
       <div class="image-container">
-          <img src="images/headerbg.webp" alt="">
+        <h1 class="hero-title">Sip n'<br>Play</h1>
+        <p class="hero-tagline">Park Slope's Best Board Game Cafe.</p>
+        <a href="#" class="hero-button">BOOK TABLE</a>
       </div>
-      <h1 class="hero-title">Sip n<br>Play</h1>
-      <p class="hero-tagline">Park Slope's Best Board Game Cafe.</p>
-      <a href="#" class="hero-button">BOOK TABLE</a>
     </header>
+    <section class="how-container">
+      <div class="how-title">
+        <h2>HOW DOES<br>IT WORK?</h2>
+      </div>
+      <div class="how-list">
+        <ul>
+          <li>
+            <h3>How does it work</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </li>
+          <li>
+            <h3>How does it work</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </li>
+          <li>
+            <h3>How does it work</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </li>
+          <li>
+            <h3>How does it work</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="about">
+      <div class="about-title"><h2>WHAT WE'RE<br>ALL ABOUT?</h2></div>
+      <div class="about-cards">
+        <div class="card-wrapper">
+          <div class="card-image">
+            <img src="./src/assets/events.jpeg" alt="">
+          </div>
+          <div class="card-details">
+            <div class="card-title"><h3>Events</h3></div>
+            <div class="card-description"><p>We host regular weekely game night events here. Check it out!!</p></div>
+            <div class="card-link">
+            <a href="#">Upcoming Events</a>
+          </div>
+          </div>
+        </div>
+        <div class="card-wrapper">
+          <div class="card-image">
+            <img src="./src/assets/events.jpeg" alt="">
+          </div>
+          <div class="card-details">
+            <div class="card-title"><h3>Events</h3></div>
+            <div class="card-description"><p>We host regular weekely game night events here. Check it out!!</p></div>
+            <div class="card-link">
+            <a href="#">Upcoming Events</a>
+          </div>
+          </div>
+        </div>
+        <div class="card-wrapper">
+          <div class="card-image">
+            <img src="./src/assets/events.jpeg" alt="">
+          </div>
+          <div class="card-details">
+            <div class="card-title"><h3>Events</h3></div>
+            <div class="card-description"><p>We host regular weekely game night events here. Check it out!!</p></div>
+            <div class="card-link">
+            <a href="#">Upcoming Events</a>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
