--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/index.css">
     <title>Vite + React</title>
   </head>
@@ -19,6 +22,7 @@
               <li><a href="#">Opening Times</a></li>
               <li><a href="#">Events</a></li>
               <li><a href="#">Menu</a></li>
+              <li><a href="#">Socials</a></li>
               <li><a href="#">Book a Table</a></li>
           </ul>
       </nav>
@@ -93,6 +97,15 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="discord">
+        <div class="discord-title">
+          <h2>Join Our<br>Discord Community</h2>
+          <p>Join to get first access to all the community events and early bird discounts.</p>
+        </div>
+        <div class="discord-button">
+          <a href="#">Join Discord</a>
+        </div>
     </section>
     <script type="module" src="/src/main.jsx"></script>
   </body>
