Font and Style update

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <p class="hero-tagline">Park Slope's Best Board Game Cafe.</p>
         <a href="#" class="hero-button">BOOK TABLE</a>
       </div>
+      
     </header>
     <section class="how-container">
       <div class="how-title">
@@ -104,9 +105,10 @@
           <p>Join to get first access to all the community events and early bird discounts.</p>
         </div>
         <div class="discord-button">
-          <a href="#">Join Discord</a>
+          <a href="#"><i class="fa-brands fa-discord"></i>Join Discord</a>
         </div>
     </section>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://kit.fontawesome.com/dd89280a6f.js" crossorigin="anonymous"></script>
   </body>
 </html>
