--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
               <h1>Sip n Play</h1>
           </div>
           <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Opening Times</a></li>
-              <li><a href="#">Events</a></li>
-              <li><a href="#">Menu</a></li>
-              <li><a href="#">Socials</a></li>
-              <li><a href="#">Book a Table</a></li>
+              <li class="home"><a href="#">Home</a></li>
+              <li class="time"><a href="#">Opening Times</a></li>
+              <li class="event"><a href="#">Events</a></li>
+              <li class="menu"><a href="#">Menu</a></li>
+              <li class="socials"><a href="#">Socials</a></li>
+              <li class="book"><a href="#">Book a Table</a></li>
           </ul>
       </nav>
       <div class="image-container">
