--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Sugar & Dice Events</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/index.css">
     <link rel="stylesheet" href="evo-calendar.min.css">
     <link rel="stylesheet" href="evo-calendar.midnight-blue.min.css">
 
