--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Sugar & Dice Events</title>
     <link rel="stylesheet" href="src/index.css">
-    <link rel="stylesheet" href="evo-calendar.min.css">
+    <link rel="stylesheet" href="src/evo-calendar.min.css">
     <link rel="stylesheet" href="evo-calendar.midnight-blue.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
