--- a/public/three.html
+++ b/public/three.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="three.css">
 </head>
 <body>
     <nav>
@@ -9,20 +10,20 @@
         </div>
         <ul>
             <li class="home"><a href="./index.html">Home</a></li>
-            <li class="time"><a href="#">Opening Times</a></li>
+            <li class="time"><a href="./index.html">Opening Times</a></li>
             <li class="event"><a href="./events.html">Events</a></li>
-            <li class="menu"><a href="./three.html">Menu</a></li>
-            <li class="socials"><a href="#">Socials</a></li>
-            <li class="book"><a href="#">Book a Table</a></li>
+            <li class="menu"><a href="three.html">Menu</a></li>
+            <li class="socials"><a href="./index.html">Socials</a></li>
+            <li class="book"><a href="./index.html">Book a Table</a></li>
         </ul>
     </nav>
   <div id="container">
     <div id="menu">
       <h2>Menu</h2>
     </div>
-    <div id="canvas-container"></div>
+    <div id="canvas-container" ></div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r146/three.min.js"></script>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="three.js"></script>
 </body>
 </html>
